--- a/src/cms/config.yml
+++ b/src/cms/config.yml
@@ -2,6 +2,8 @@ backend:
   name: github
   repo: <% GITHUB_REPOSITORY %> # Gulp will replace this with your GitHub repository
   branch: master # Branch to update (master by default)
+  #site_domain: netlify.coursepad.net
+  base_url: netlify.coursepad.net:3003
 
 media_folder: "site/static/img" # Folder where user uploaded files should go
 public_folder: "img"
@@ -16,6 +18,7 @@ collections: # A list of collections the CMS should be able to edit
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Intro Blurb", name: "description", widget: "text"}
       - {label: "Image", name: "image", widget: "image", required: false}
+      - {label: "File", name: "file", widget: "file", required: false}	  
       - {label: "Body", name: "body", widget: "markdown"}
   - name: "pages"
     label: "Pages"
@@ -28,6 +31,7 @@ collections: # A list of collections the CMS should be able to edit
           - {label: Type, name: type, widget: hidden, default: products}
           - {label: Page, name: page, widget: hidden, default: "/products.html"}
           - {label: Image, name: image, widget: image}
+          - {label: File, name: file, widget: file}
           - {label: Heading, name: heading, widget: string}
           - {label: Description, name: description, widget: string}
           - {label: Intro, name: intro, widget: object, fields: [{label: Heading, name: heading, widget: string}, {label: Description, name: description, widget: text}, {label: Blurbs, name: blurbs, widget: list, fields: [{label: Image, name: image, widget: image}, {label: Text, name: text, widget: text}]}]}
